Prevent images from stretching

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,6 +47,7 @@ h1 {
 img {
     max-width: 100%;
     vertical-align: middle;
+    object-fit: contain;
 }
 
 
